<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="button_metric">Metric</string>
    <string name="button_US">US</string>
    <string name="button_calculate">Calculate BMI</string>
    <string name="message_home">Pick a way to calculate your BMI</string>
    <string name="message_kilos">Enter weight in kilograms</string>
    <string name="message_pounds">Enter weight in pounds</string>
    <string name="message_meters">Enter height in meters. Example: 1.83</string>
    <string name="message_inches">Enter height in inches</string>
    <string name="message_directions">Enter your values below</string>
    <string name="BMI_values1">Below 18.5 --> Underweight</string>
    <string name="BMI_values2">18.5 - 24.9 --> Normal</string>
    <string name="BMI_values3">25 - 29.9 --> Overweight</string>
    <string name="BMI_values4">30.0 and Above --> Obese</string>

</resources>
