<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="24dp"
    tools:context="com.mucsc2450.alex.bmicalculator.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message_home" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:text="@string/button_metric"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_metric" />

        <Button
            android:text="@string/button_US"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_US" />
    </LinearLayout>
</LinearLayout>
